Fixed library scrollbar + padding

--- a/ui/library.reel/library-cell.reel/library-cell.css
+++ b/ui/library.reel/library-cell.reel/library-cell.css
@@ -75,12 +75,12 @@
 }
 
 .LibraryCell {
-    -webkit-flex: 1 0 33%;
-    max-width: 33%;
+    -webkit-flex: 1 0 60px;
+    max-width: 60px;
 }
 
 .LibraryCell-button.matte-Button {
-    padding: 8px 3px;
+    padding: 8px 2px;
     text-align: center;
     border-radius: 0;
 	
@@ -107,6 +107,7 @@
 
 .Library.isList .LibraryGroup-list {
     display: initial;
+    padding: 0;
 } 
 
 .Library.isList .LibraryCell {
