--- a/ui/library.reel/library-group.reel/library-group.css
+++ b/ui/library.reel/library-group.reel/library-group.css
@@ -46,6 +46,6 @@
 /* List ------------------------- */
 
 .LibraryGroup-list {
-    padding: 0;
+    padding: 8px;
     margin: 0;
 }
